Mon Aug 11 11:26:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb: start rdoc parsing inside singleton class
	  definition to include the document there.
	  [ruby-core:64157] [Bug #10105]

Sun Aug 10 12:22:43 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_type.c: refactoring.

Sun Aug 10 10:34:00 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/cgi/session/pstore.rb: separated sample code.
	* lib/open3.rb: ditto.

Sun Aug 10 10:03:24 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/irb/ext/multi-irb.rb: removed commented-out code.

Sat Aug  9 11:02:07 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/irb.rb: removed commented-out code.
	* lib/irb/**/*.rb: ditto.

Sat Aug  9 10:35:30 2014  Laurent Arnoud  <laurent@spkdev.net>

	* lib/cmath.rb: fixed indent. [fix GH-696]
	* lib/drb/ssl.rb: ditto.
	* lib/irb/**/*.rb: ditto.

Sat Aug  9 10:28:03 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/minitest/test_minitest_unit.rb: removed obsoleted condition
	  for Ruby 1.8.
	* test/ruby/test_time_tz.rb: ditto.

Sat Aug  9 10:18:00 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/cgi/test_cgi_core.rb: removed obsoleted condition for Ruby 1.8.
	* test/cgi/test_cgi_header.rb: ditto.
	* test/cgi/test_cgi_multipart.rb: ditto.
	* test/cgi/test_cgi_tag_helper.rb: ditto.

Sat Aug  9 00:34:37 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate WIN32OLE_TYPE src from win32ole.c.
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_type.c: ditto.
	* ext/win32ole/win32ole_type.h: ditto.
	* ext/win32ole/depend: ditto.

Fri Aug  8 01:53:37 2014  Masaki Matsushita <glass.saga@gmail.com>

	* lib/securerandom.rb: use OpenSSL::BN for performance improvement.

	* benchmark/bm_securerandom.rb: benchmark script.

Fri Aug  8 17:19:57 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/open-uri.rb: remove needless condition for old ruby version.